@@ -2,6 +2,8 @@ h1. Version 0.1.6
 March 2012
 
 * Added more data to the display of a UI tree by breaking out the visitor code using the visitor pattern and delegate pattern.
+* Added handlers for UIButtons and UILabels so that the print tree function could work better.
+* Added label text, button titles, UIView tags, accessibilityIdentifiers and labels as attributes to be printed.
 
 h1. Version 0.1.5
 March 2012
